[metadata]
name = AstraCarta
version = 1.0.39
author = Joseph E. Postma
author_email = joepostma@live.ca, jpostma@ucalgary.ca
description = Perform astroquery with useful options
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/user29A/astracarta
project_urls =
    Bug Tracker = https://github.com/user29A/astracarta/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[dependencies] = ["astroquery, matplotlib,]

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

install_requires =
    astroquery>=0.4.6
    matplotlib>=3.5.0

[options.packages.find]
where = src

[options.entry_points] 
console_scripts =
    AstraCarta = AstraCarta.AstraCarta:astracartaCall
